// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`execute addresses endpoint should return success 1`] = `
{
  "data": {
    "result": [
      {
        "address": "31h6SJ58NqVrifuyXN5A19ByD6vgyKVHEY",
        "balance": "123",
        "chainId": "mainnet",
        "coin": "btc",
        "id": "601c5e4b11b1d4001e37091aa2618ee9",
        "network": "bitcoin",
        "type": "custodial",
        "verified": false,
      },
    ],
  },
  "result": null,
  "statusCode": 200,
  "timestamps": {
    "providerDataReceivedUnixMs": 978347471111,
    "providerDataRequestedUnixMs": 978347471111,
  },
}
`;

exports[`execute members endpoint should return success 1`] = `
{
  "data": {
    "result": [
      {
        "address": "3Lto4jAz1aGJQwNSAZ6TEEFuoHoBb8kRc7",
        "balance": "456",
        "chainId": "mainnet",
        "coin": "btc",
        "id": "601323767069d60008cb538b32c33cb1",
        "network": "bitcoin",
        "type": "custodial",
        "verified": false,
      },
    ],
  },
  "result": null,
  "statusCode": 200,
  "timestamps": {
    "providerDataReceivedUnixMs": 978347471111,
    "providerDataRequestedUnixMs": 978347471111,
  },
}
`;
